@@ -1,30 +1,40 @@
-#region License
-// 
-// Author: Nate Kohari <nate@enkari.com>
-// Copyright (c) 2007-2010, Enkari, Ltd.
-// 
-// Dual-licensed under the Apache License, Version 2.0, and the Microsoft Public License (Ms-PL).
-// See the file LICENSE.txt for details.
-// 
-#endregion
-#region Using Directives
-using System;
-using System.Collections;
-using System.Collections.Generic;
-using System.Linq;
-using System.Reflection;
-using Ninject.Activation;
-using Ninject.Components;
-using Ninject.Infrastructure;
-using Ninject.Infrastructure.Language;
-using Ninject.Parameters;
-using Ninject.Planning.Directives;
-using Ninject.Planning.Targets;
-
-#endregion
+//-------------------------------------------------------------------------------
+// <copyright file="StandardConstructorScorer.cs" company="Ninject Project Contributors">
+//   Copyright (c) 2007-2009, Enkari, Ltd.
+//   Copyright (c) 2009-2011 Ninject Project Contributors
+//   Authors: Nate Kohari (nate@enkari.com)
+//            Remo Gloor (remo.gloor@gmail.com)
+//           
+//   Dual-licensed under the Apache License, Version 2.0, and the Microsoft Public License (Ms-PL).
+//   you may not use this file except in compliance with one of the Licenses.
+//   You may obtain a copy of the License at
+//
+//       http://www.apache.org/licenses/LICENSE-2.0
+//   or
+//       http://www.microsoft.com/opensource/licenses.mspx
+//
+//   Unless required by applicable law or agreed to in writing, software
+//   distributed under the License is distributed on an "AS IS" BASIS,
+//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+//   See the License for the specific language governing permissions and
+//   limitations under the License.
+// </copyright>
+//-------------------------------------------------------------------------------
 
 namespace Ninject.Selection.Heuristics
 {
+    using System;
+    using System.Collections;
+    using System.Linq;
+
+    using Ninject.Activation;
+    using Ninject.Components;
+    using Ninject.Infrastructure;
+    using Ninject.Infrastructure.Language;
+    using Ninject.Parameters;
+    using Ninject.Planning.Directives;
+    using Ninject.Planning.Targets;
+
     /// <summary>
     /// Scores constructors by either looking for the existence of an injection marker
     /// attribute, or by counting the number of parameters.
@@ -41,12 +51,14 @@ namespace Ninject.Selection.Heuristics
         {
             Ensure.ArgumentNotNull(context, "context");
             Ensure.ArgumentNotNull(directive, "constructor");
-            
-            if(directive.Constructor.HasAttribute(Settings.InjectAttribute))
-                return Int32.MaxValue;
-            
-            int score = 1;
-            foreach(ITarget target in directive.Targets)
+
+            if (directive.Constructor.HasAttribute(Settings.InjectAttribute))
+            {
+                return int.MaxValue;
+            }
+
+            var score = 1;
+            foreach (ITarget target in directive.Targets)
             {
                 if (ParameterExists(context, target))
                 {
@@ -54,26 +66,48 @@ namespace Ninject.Selection.Heuristics
                     continue;
                 }
                 
-                Type targetType = target.Type;
-                if(targetType.IsArray)
-                    targetType = targetType.GetElementType();
-
-                if(targetType.IsGenericType && targetType.GetInterfaces().Any(type => type == typeof(IEnumerable)))
-                    targetType = targetType.GetGenericArguments()[0];
-
-                if (context.Kernel.GetBindings(targetType).Any())
-                    score++;
-                else
+                if (BindingExists(context, target))
                 {
                     score++;
-                    if (score > 0)
-                    {
-                        score += Int32.MinValue;
-                    }
+                    continue;
+                }
+
+                score++;
+                if (score > 0)
+                {
+                    score += int.MinValue;
                 }
             }
             
             return score;
+        }
+
+        private static bool BindingExists(IContext context, ITarget target)
+        {
+            var targetType = GetTargetType(target);
+            return context.Kernel.GetBindings(targetType).Any()
+                   || target.HasDefaultValue
+                   || (!targetType.IsInterface
+                       && !targetType.IsAbstract
+                       && !targetType.IsValueType
+                       && targetType != typeof(string)
+                       && !targetType.ContainsGenericParameters);
+        }
+
+        private static Type GetTargetType(ITarget target)
+        {
+            var targetType = target.Type;
+            if (targetType.IsArray)
+            {
+                targetType = targetType.GetElementType();
+            }
+
+            if (targetType.IsGenericType && targetType.GetInterfaces().Any(type => type == typeof(IEnumerable)))
+            {
+                targetType = targetType.GetGenericArguments()[0];
+            }
+
+            return targetType;
         }
 
         private static bool ParameterExists(IContext context, ITarget target)
